# derive_conceptualspaces

./: .dockerignore  .dockershell.sh  .gitattributes  .gitignore  Dockerfile  README.md  environment.yml  install_windows.bat  pyproject.toml  requirements-classifier.txt  requirements-dev.txt  requirements.txt  setup.py  test_env.env
.run/: 0) Check Languages.run.xml  0) Translate Titles_Descriptions.run.xml  1) Preprocess Descriptions.run.xml  2) Create-Dissim-Matrix.run.xml  3) Create Embedding.run.xml  4) Extract Candidate-Terms (Keybert).run.xml  4) Extract Candidate-Terms.run.xml  5) Postprocess Candidates (Keybert).run.xml  5) Postprocess Candidates special.run.xml  6) Create Doc-Candidate-Matrix special.run.xml  7) Create Candidate SVM best placetypes.run.xml  7) Create Candidate SVM special.run.xml  8) Cluster Feature-Axes best placetypes.run.xml  8) Rank using Salient Directions best placetypes.run.xml  8) Rank using Salient Directions best siddata2022.run.xml  9) Find Name for Cluster.run.xml  9a) Shallow Decision Trees.run.xml  List Existing Parameter-Combis.run.xml  MongoDB-Container.run.xml  Run LSI (binary quant).run.xml  Run LSI (default quant).run.xml  Show Data Info best placetypes.run.xml  Snakemake all.run.xml  Snakemake all_for.run.xml  Snakemake by_config.run.xml  Snakemake default.run.xml  Snakemake specificfile.run.xml  analyze_log.run.xml  args_from_filename reverse.run.xml  args_from_filename.run.xml  create_fbclas_dataset.run.xml  kappa_args.run.xml  load_derrac2015_semanticspaces_ raw places.run.xml  load_semanticspaces.run.xml  logfile_for with job.run.xml  pytest all.run.xml  run_fb_classifier NEW.run.xml  run_manually.sh by_config.run.xml  sge-submit TEST.run.xml  sge_status.run.xml  (+1 more)
REFACTOR_ME/: deprecated.py
config/: ager2018.yml  alshaikh2020.yml  big_21222.yml  derrac2015.yml  derrac2015_edited.yml
derive_conceptualspace/: __main__.py  _version.py  pipeline.py  settings.py  unfinished_commands.py
doc/: docker_intro.md  enable_gtranslate.md  install_docker.md  referenced_plots.md  setup_container.md
docker/: docker-compose.yml  entrypoint.sh  sample.env
fb_classifier/: dataset.py  model.py  preprocess_data.py  (+2 more)
(+214 files in other folders)
