[project]
name = "derive-conceptualspace"
description = "Codebase for Data-Driven Embedding of educational resources in a vector-space with interpretable Dimensions for Explainable Recommendation"
authors = [
  {email = "cstenkamp@uos.de"},
  {name = "Chris Stenkamp "}
]
readme = "README.md"
requires-python = ">=3.9.0" #actually 3.10 but there's an annoying numpy-bug
version = "1.2.20220407" # why can't that dynamic from the _version.py anymore!
#homepage = "https://github.com/cstenkamp/MastersThesisText/"
#repository = "https://github.com/cstenkamp/derive_conceptualspaces/"
#documentation = "TODO"
# https://github.com/pypa/setuptools/issues/3199


[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"
